err/dead-parrot.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dead_parrot-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/deadparrot'...
Listing './lib/python3.5/site-packages/deadparrot/lib'...
Listing './lib/python3.5/site-packages/deadparrot/models'...
Compiling './lib/python3.5/site-packages/deadparrot/models/attributes.py'...
***   File "./lib/python3.5/site-packages/deadparrot/models/attributes.py", line 83
    raise TypeError, "DateTimeAttribute "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deadparrot/models/base.py'...
***   File "./lib/python3.5/site-packages/deadparrot/models/base.py", line 126
    raise InvalidRelationShipError, \
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deadparrot/models/fields.py'...
***   File "./lib/python3.5/site-packages/deadparrot/models/fields.py", line 60
    raise TypeError, u"%s.%s param must be a bool" \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deadparrot/models/registry.py'...
***   File "./lib/python3.5/site-packages/deadparrot/models/registry.py", line 34
    raise TypeError, "ModelRegistry.get_all "\
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deadparrot/serialization'...
Compiling './lib/python3.5/site-packages/deadparrot/serialization/__init__.py'...
***   File "./lib/python3.5/site-packages/deadparrot/serialization/__init__.py", line 31
    raise NotImplementedError, 'The format %r was not implemented ' \
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deadparrot/serialization/plugins'...
Compiling './lib/python3.5/site-packages/deadparrot/serialization/plugins/base.py'...
***   File "./lib/python3.5/site-packages/deadparrot/serialization/plugins/base.py", line 27
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deadparrot/serialization/plugins/json.py'...
***   File "./lib/python3.5/site-packages/deadparrot/serialization/plugins/json.py", line 29
    raise TypeError, "JSONSerializer takes a list or " \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/deadparrot/serialization/plugins/xml.py'...
***   File "./lib/python3.5/site-packages/deadparrot/serialization/plugins/xml.py", line 12
    raise TypeError, "XMLSerializer takes a" \
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deadparrot/server'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
